--- a/package.json
+++ b/package.json
@@ -30,6 +30,9 @@
         "@upstatement/prettier-config": "^0.3.0"
     },
     "dependencies": {
+        "cors": "^2.8.5",
+        "express": "^4.17.1",
+        "mongoose": "^5.11.14",
         "node-notifier": "^8.0.1",
         "object-path": "^0.11.5"
     }
