--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
         "react-table-6": "^6.11.0",
         "redux": "^4.0.5",
         "redux-thunk": "^2.3.0",
+        "semantic-ui-react": "^2.0.3",
         "styled-components": "^5.0.1"
     },
     "scripts": {
